syntax = "proto3";

package orders_service;

option go_package = "./;orders_service";

import "google/protobuf/timestamp.proto";


message ShopItem {
  string Title = 1;
  string Description = 2;
  uint64 Quantity = 3;
  double Price = 4;
}

message Order {
  string OrderId = 1;
  repeated ShopItem ShopItems = 2;
  bool Paid = 3;
  bool Submitted = 4;
  bool Completed = 5;
  bool Canceled = 6;
  double TotalPrice = 7;
  string AccountEmail = 8;
  string CancelReason = 9;
  string DeliveryAddress = 10;
  google.protobuf.Timestamp  DeliveredTime = 11;
  google.protobuf.Timestamp  CreatedAt = 12;
  google.protobuf.Timestamp  UpdatedAt = 13;
  string PaymentId = 14;
}

message OrderReadModel {
  string Id = 1;
  string OrderId = 2;
  repeated ShopItemReadModel ShopItems = 3;
  bool Paid = 4;
  bool Submitted = 5;
  bool Completed = 6;
  bool Canceled = 7;
  double TotalPrice = 8;
  string AccountEmail = 9;
  string CancelReason = 10;
  string DeliveryAddress = 11;
  google.protobuf.Timestamp  DeliveredTime = 12;
  google.protobuf.Timestamp  CreatedAt = 13;
  google.protobuf.Timestamp  UpdatedAt = 14;
  string PaymentId = 15;
}

message ShopItemReadModel {
  string Title = 1;
  string Description = 2;
  uint64 Quantity = 3;
  double Price = 4;
}

message CreateOrderReq {
  string AccountEmail = 1;
  repeated ShopItem ShopItems = 2;
  string DeliveryAddress = 3;
  google.protobuf.Timestamp  DeliveryTime = 4;
}

message CreateOrderRes {
  string OrderId = 1;
}

message SubmitOrderReq {
  string OrderId = 1;
}

message SubmitOrderRes {
  string OrderId = 1;
}

message GetOrderByIDReq {
  string Id = 1;
}

message GetOrderByIDRes {
  OrderReadModel Order = 1;
}

message UpdateShoppingCartReq {
  string OrderId = 1;
  repeated ShopItem ShopItems = 2;
}

message UpdateShoppingCartRes {}

message GetOrdersReq {
  string SearchText = 1;
  int32 Page = 2;
  int32 Size = 3;
}

message GetOrdersRes {
  Pagination Pagination = 1;
  repeated OrderReadModel Orders = 2;
}

message Pagination {
  int64 TotalItems = 1;
  int32 TotalPages = 2;
  int32 Page = 3;
  int32 Size = 4;
  bool HasMore = 5;
}

service OrdersService {
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderRes);
  rpc SubmitOrder(SubmitOrderReq) returns (SubmitOrderRes);
  rpc UpdateShoppingCart(UpdateShoppingCartReq) returns (UpdateShoppingCartRes);
  rpc GetOrderByID(GetOrderByIDReq) returns (GetOrderByIDRes);
  rpc GetOrders(GetOrdersReq) returns (GetOrdersRes);
}
